// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxView renders RTL styling 1`] = `
<div
  className="c-chk is-rtl "
  data-garden-id="checkboxes.checkbox_view"
  data-garden-version="version"
/>
`;

exports[`CheckboxView renders default styling 1`] = `
<div
  className="c-chk "
  data-garden-id="checkboxes.checkbox_view"
  data-garden-version="version"
/>
`;
